--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!doctype html>
-<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
-<title>Charan — Portfolio</title></head>
-<body><h1>Charan Vijayan</h1><p>Portfolio coming soon.</p></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Charan Portfolio</title>
+</head>
+<body>
+    <h1>Hello! This is my first GitHub Page.</h1>
+    <p>More content coming soon.</p>
+</body>
+</html>
