--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Email: charanvijayan27@outlook.com</p>
+                <p>LinkedIn: https://www.linkedin.com/in/charan-vijayan/</p>
             </section>
         </main>
         
