--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                         2. Data Analysis
                         3. Artificial Intelligence
                         4. Achivements -->
+                <div class="project-card">
+    <h3>Project Alpha</h3>
+    <p>Description of your project</p>
+    <a href="https://github.com/charan0027/Project-Alpha" target="_blank">View on GitHub</a>
+</div>
+
                 </div>
             </section>
             
