--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
             <section id="projects">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- 1. Urban Design Portfolio
-                        2. Data Analysis
-                        3. Artificial Intelligence
-                        4. Achivements -->
+                    <!-- Urban Portfolio -->
                 <div class="project-card">
     <h3>Project Alpha</h3>
     <p>Description of your project</p>
