--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="sidebar-header">
-      <h1>Your Name</h1>
-      <p>Urban Designer | Data Projects</p>
+      <h1>Charan Vijayan</h1>
+      <p>Urban Designer | Urban tech enthusiast </p>
       <p class="contact">
-        <a href="mailto:youremail@example.com">youremail@example.com</a><br>
-        <a href="https://www.linkedin.com/in/your-link" target="_blank">LinkedIn</a>
+        <a href="mailto:charanvijayan27@outlook.com">charanvijayan27@outlook.com</a><br>
+        <a href="https://www.linkedin.com/in/charan-vijayan" target="_blank">LinkedIn</a>
       </p>
     </div>
 
