--- a/CMDA/index.html
+++ b/CMDA/index.html
@@ -44,13 +44,22 @@
     <a href="../index.html#data-projects" class="back-link">&larr; Back to portfolio</a>
 
     <section class="block">
-      <h2>CMDA project – Financial &amp; operational analysis</h2>
+      <h2>Spatial Distribution of Employment and Income Categories in the Chennai Metropolitan Area</h2>
       <p>
-        One‑paragraph summary: what problem CMDA faces, what data you used,
-        and what kind of decisions this work supports.
+        As an input into the preparation of the Third Master Plan, the Chennai Metropolitan Development Authority
+(CMDA) selected the Indian Institute for Human Settlements (IIHS) to undertake a study on the Spatial
+Distribution of Employment and Income Categories (SDEIC) in Chennai Metropolitan Area. The study is
+supported by the World Bank under the Tamil Nadu Housing and Habitat Development Project.
+The Chennai metropolitan region plays a substantial role in the state’s economy, and has a diversified economic
+base that spans manufacturing, services, and administration linked economies. In 2022, the CMDA expanded
+the boundaries of the Chennai Metropolitan Area (CMA) to a larger area spanning 5,904 square kilometres (sq.
+km), and the purpose of this study is to understand the economic geography, income distribution, labour market
+dynamics and commuting pattern across the CMA. This study aims to provide data and methods to enable CMDA
+to balance the objectives of economic growth, equity, and sustainability across the CMA as part of the Third
+Master Plan.
       </p>
       <p>
-        Mention tech stack briefly: e.g. R, RMarkdown, spatial data, dashboards, etc.
+        Mentioning tech stack briefly: e.g. R, RMarkdown, spatial data, dashboards, etc.
       </p>
 
       <!-- Hero image (optional) -->
