Add CMDA project summary card to index.html

--- a/index.html
+++ b/index.html
@@ -45,18 +45,26 @@
     <section id="data-projects" class="block">
       <h2>Data projects</h2>
 
-      <!-- CMDA project (with sub‑topics inside text) -->
-      <article class="project">
-        <h3>CMDA project</h3>
-        <p>
-          Short 2–3 line description of what the project is about.
-        </p>
-        <ul class="project-links">
-          <li><a href="#" target="_blank">Financial &amp; operational analysis</a></li>
-          <li><a href="#" target="_blank">GitHub repo</a></li>
-          <li><a href="#" target="_blank">Slides / report</a></li>
-        </ul>
+
       </article>
+          <!-- CMDA project (summary card on main page) -->
+  <article class="project">
+  <h3>CMDA project – Urban data for Chennai</h3>
+  <p>
+    Evidence-based analysis for CMDA combining financial, operational and spatial datasets
+    to support planning and decision-making.
+  </p>
+  <ul class="project-links">
+     <li><a href="CMDA/index.html" target="_blank">Project overview</a></li>
+     <li><a href="CMDA/SDEIC_CMDA_IIHS_Consolidated Report_300625_compressed.pdf" target="_blank">Full report (PDF)</a></li>
+     <li><a href="CMDA/HH_Commute-and-employment-tiers.html" target="_blank">Commute and employment tiers based on Household survey dataset</a></li>
+     <li><a href="CMDA/Mobility-plots.html" target="_blank">Plotting mobility data with Workplace survey dataset</a></li>
+     <li><a href="CMDA/Overall-combined-commute-and-workplace-mobility.html" target="_blank"> Analysing commute to workplace</a></li>
+     <li><a href="CMDA/Workplace-survey-Mobility-Analysis.html" target="_blank">Mobility analysis on Workplace Survey</a></li>
+    
+  
+     </ul>
+     </article>
 
       <!-- Data Jam 1 – Air quality -->
       <article class="project">
@@ -108,6 +116,8 @@
         </ul>
       </article>
     </section>
+
+
 
     <!-- 3. Interdiscipline -->
     <section id="interdiscipline" class="block">
