--- a/CMDA/index.html
+++ b/CMDA/index.html
@@ -67,24 +67,34 @@ Master Plan.
     </section>
 
     <section class="block">
-      <h3>Deliverables</h3>
+      <h3>Data analysis with workplace and household dataset :</h3>
       <ul>
         <li><strong>Technical report:</strong>
-          <a href="report.pdf" target="_blank">Download PDF</a>
+          <a href="CMDA/SDEIC_CMDA_IIHS_Consolidated Report_300625_compressed.pdf" target="_blank">Full report (PDF)</a>
         </li>
-        <li><strong>Exploratory analysis notebook:</strong>
-          <a href="analysis1.html" target="_blank">Interactive HTML (RMarkdown)</a>
+        
+        <li><strong>Commute and employment tiers based on Household survey dataset</strong>
+          <a href="CMDA/HH_Commute-and-employment-tiers.html" target="_blank">Interactive HTML </a>
         </li>
-        <li><strong>Scenario / optimisation notebook:</strong>
-          <a href="analysis2.html" target="_blank">Interactive HTML</a>
-        </li>
+        
+        <li><strong>Plotting mobility data with Workplace survey dataset</strong>
+          <a href="CMDA/Mobility-plots.html" target="_blank">Interactive HTML</a>
+          </li>
+
+        <li><strong>Analysing commute to workplace</strong>
+          <a href="CMDA/Overall-combined-commute-and-workplace-mobility.html" target="_blank">Interactive HTML</a>
+          </li>
+
+        <li><strong>Mobility analysis on Workplace Survey</strong>
+          <a href="CMDA/Workplace-survey-Mobility-Analysis.html" target="_blank">Interactive HTML</a>
+          </li>
       </ul>
     </section>
 
     <section class="block">
-      <h3>Key visuals</h3>
+      <h3>Visuals of Chennai</h3>
       <p>
-        A visual gallery helps reviewers quickly see maps, charts, and dashboards.
+        A curated collection of photographs captured in Chennai, India, documenting the city’s diverse economic clusters.
       </p>
       <div class="thumb-grid">
         <div class="thumb-card">
