Update image sources and descriptions in index.html

--- a/CMDA/index.html
+++ b/CMDA/index.html
@@ -98,17 +98,22 @@ Master Plan.
       </p>
       <div class="thumb-grid">
         <div class="thumb-card">
-          <img src="images/fig2.png" alt="Revenue vs expenditure by zone">
-          <p>Revenue vs expenditure by zone.</p>
+          <img src="CMDA/Images/IMG_5302.jpg" alt="4, Annai Velankanni Road, Odaimanagar, Besant Nagar, Chennai, Tamil Nadu 600090">
+          <p>Church near an EWS housing, Besant Nagar.</p>
         </div>
         <div class="thumb-card">
-          <img src="images/fig3.png" alt="Operational KPIs dashboard">
-          <p>Operational KPIs dashboard for priority wards.</p>
+          <img src="CMDA/Images/IMG_5304.jpg" alt="George town, Chennai, Tamil Nadu">
+          <p>Desnse residential area in George town.</p>
         </div>
         <div class="thumb-card">
-          <img src="images/fig4.png" alt="Scenario comparison map">
-          <p>Scenario comparison map for proposed interventions.</p>
+          <img src="CMDA/Images/IMG_5307.jpg" alt="George town, Chennai, Tamil Nadu">
+          <p>Religious center in George town.</p>
         </div>
+        <div class="thumb-card">
+          <img src="CMDA/Images/P_20210801_101845.jpg" alt="Egmore, Chennai, Tamil Nadu">
+          <p>Iconic autorickshaw ride in Chennai.</p>
+        </div>
+        
       </div>
     </section>
 
