Update project titles and links in index.html

--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
 
       <!-- Data Jam 1 – Air quality -->
       <article class="project">
-        <h3>Data Jam 1 – Air quality</h3>
+        <h3>Bengaluru Air Quality Datajam – March 2025</h3>
         <p>Short description of the jam, data used, and outcome.</p>
         <ul class="project-links">
-          <li><a href="#" target="_blank">Notebook / app</a></li>
+          <li><a href="https://opencity.in/bengaluru-air-quality-datajam-march-2025/" target="_blank">Overview</a></li>
           <li><a href="#" target="_blank">GitHub repo</a></li>
         </ul>
       </article>
 
       <!-- Data Jam 2 – Chennai water -->
       <article class="project">
-        <h3>Data Jam 2 – Chennai water</h3>
+        <h3>Design Jam on Chennai Water – April 2025</h3>
         <p>Short description.</p>
         <ul class="project-links">
-          <li><a href="#" target="_blank">Notebook / app</a></li>
+          <li><a href="https://opencity.in/design-jam-on-chennai-water-april-2025/" target="_blank">Overview</a></li>
           <li><a href="#" target="_blank">GitHub repo</a></li>
         </ul>
       </article>
