Add profile photo to sidebar section

--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
 </head>
 <body>
   <!-- Sidebar -->
-  <aside class="sidebar">
-    <div class="sidebar-header">
-      <h1>Charan Vijayan</h1>
-      <p>Urban Designer | Urban tech enthusiast </p>
-      <p class="contact">
-        <a href="mailto:charanvijayan27@outlook.com">charanvijayan27@outlook.com</a><br>
-        <a href="https://www.linkedin.com/in/charan-vijayan" target="_blank">LinkedIn</a>
-      </p>
-    </div>
+    <aside class="sidebar">
+  <div class="sidebar-header">
+    <img src="path/to/your/photo.jpg" alt="Charan Vijayan Profile Photo" class="profile-photo">
+    
+    <h1>Charan Vijayan</h1>
+    <p>Urban Designer | Urban tech enthusiast </p>
+    <p class="contact">
+      <a href="mailto:charanvijayan27@outlook.com">charanvijayan27@outlook.com</a><br>
+      <a href="https://www.linkedin.com/in/charan-vijayan" target="_blank">LinkedIn</a>
+    </p>
+  </div>
 
+  <nav class="sidebar-nav">
+    </nav>
+</aside>
+
+    
     <nav class="sidebar-nav">
       <a href="#data-projects">Data projects</a>
       <a href="#design-planning">Design / planning work</a>
