Update profile photo path in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Sidebar -->
     <aside class="sidebar">
   <div class="sidebar-header">
-    <img src="path/to/your/photo.jpg" alt="Charan Vijayan Profile Photo" class="profile-photo">
+    <img src="Profile photo.jpg" alt="Charan Vijayan Profile Photo" class="profile-photo">
     
     <h1>Charan Vijayan</h1>
     <p>Urban Designer | Urban tech enthusiast </p>
