--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@ title: Charan Vijayan | A tech-efficient city enthusiast
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css"> 
+  <!-- path is from site root; style.css must be in the repo root -->
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <!-- Left sidebar with photo and navigation -->
   <aside class="sidebar">
     <div class="sidebar-header">
-      <img src="Profile photo.jpg" alt="Charan Vijayan Profile Photo" class="profile-photo"> 
-      
+      <img src="Profile photo.jpg" alt="Charan Vijayan Profile Photo" class="profile-photo">
+
       <h1>Charan Vijayan</h1>
-      <p>Urban Designer | Urban tech enthusiast </p>
+      <p>Urban Designer | Urban tech enthusiast</p>
       <p class="contact">
         <a href="mailto:charanvijayan27@outlook.com">charanvijayan27@outlook.com</a><br>
         <a href="https://www.linkedin.com/in/charan-vijayan" target="_blank">LinkedIn</a>
@@ -32,15 +34,19 @@ title: Charan Vijayan | A tech-efficient city enthusiast
     </nav>
   </aside>
 
+  <!-- Main content (no photo here) -->
   <main class="content">
 
     <section id="home" class="block">
       <h2>About</h2>
       <p>
-        I am a graduate with a bachelor's degree in urban design and looking forward for an exciting career in the public realm. 
-        I am actively pursuing a career that will allow me to leverage my expertise effectively in sustainable infrastructure, inclusive mobility, and people-oriented design to rejuvenate cities into dynamic, efficient, and futuristic spaces that enhance the quality of life for their inhabitants. 
-        Moreover, my interest in capacity building, systems thinking, urban data, and policy-making provides me the lens to understand a specific project altogether.
-        My educational background encompasses Urban Design, Urban Planning, and public policies providing me with a solid foundation in the Urban development sector.
+        I am a graduate with a bachelor's degree in urban design and looking forward for an exciting career in the public realm.
+        I am actively pursuing a career that will allow me to leverage my expertise effectively in sustainable infrastructure,
+        inclusive mobility, and people-oriented design to rejuvenate cities into dynamic, efficient, and futuristic spaces.
+      </p>
+      <p>
+        My interest in capacity building, systems thinking, urban data, and policy-making helps me approach projects holistically.
+        My education in Urban Design, Urban Planning, and public policies gives me a solid foundation in the urban development sector.
       </p>
     </section>
 
@@ -54,7 +60,7 @@ title: Charan Vijayan | A tech-efficient city enthusiast
           to support planning and decision-making.
         </p>
         <ul class="project-links">
-          <li><a href="CMDA/index.html" target="_blank">Project overview</a></li>
+          <li><a href="cmda/index.html" target="_blank">Project overview</a></li>
         </ul>
       </article>
 
@@ -126,7 +132,7 @@ title: Charan Vijayan | A tech-efficient city enthusiast
     </section>
 
     <section id="summer-schools" class="block">
-      <h2>Summer schools & fun stuff</h2>
+      <h2>Summer schools &amp; fun stuff</h2>
       <ul>
         <li><strong>School / program name</strong> – one‑line what you did, link if available.</li>
         <li><strong>Another activity</strong> – description and link.</li>
