--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
----
-layout: default
-title: Charan Vijayan | A tech-efficient city enthusiast
----
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
+  <title>Charan Vijayan | A tech-efficient city enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- path is from site root; style.css must be in the repo root -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
   <!-- Left sidebar with photo and navigation -->
   <aside class="sidebar">
     <div class="sidebar-header">
