Fix DOCTYPE declaration in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
- <!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Charan Vijayan | A tech-efficient city enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- IMPORTANT: relative path, NOT starting with / -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,6 +21,9 @@
         <a href="https://www.linkedin.com/in/charan-vijayan" target="_blank">LinkedIn</a>
       </p>
     </div>
+
+
+
 
     <nav class="sidebar-nav">
       <a href="#data-projects">Data projects</a>
