Correct capitalization of 'Project Overview' link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           to support planning and decision-making.
         </p>
         <ul class="project-links">
-          <li><a href="CMDA/index.html" target="_blank">Project overview</a></li>
+          <li><a href="CMDA/index.html" target="_blank">Project Overview</a></li>
         </ul>
       </article>
 
