--- a/CMDA/index.html
+++ b/CMDA/index.html
@@ -5,7 +5,6 @@
   <title>CMDA project | Your Name</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="../style.css">
-   <a href="../index.html#data-projects" class="back-link">&larr; Back to portfolio</a>
 
   <style>
     /* Small tweaks specific to this page */
@@ -113,17 +112,17 @@ Master Plan.
     </div>
 
     <div class="thumb-card">
-      <img src="CMDA/Images/IMG_5304.jpg" alt="Dense residential area in George Town, Chennai.">
+      <img src="Images/IMG_5304.jpg" alt="Dense residential area in George Town, Chennai.">
       <p>Dense residential area in George town.</p>
     </div>
 
     <div class="thumb-card">
-      <img src="CMDA/Images/IMG_5307.jpg" alt="Religious center in George Town, Chennai.">
+      <img src="Images/IMG_5307.jpg" alt="Religious center in George Town, Chennai.">
       <p>Religious center in George town.</p>
     </div>
 
     <div class="thumb-card">
-      <img src="CMDA/Images/P_20210801_101845.jpg" alt="Autorickshaw ride in Egmore, Chennai.">
+      <img src="Images/P_20210801_101845.jpg" alt="Autorickshaw ride in Egmore, Chennai.">
       <p>Iconic autorickshaw ride in Chennai.</p>
     </div>
 
