--- a/CMDA/index.html
+++ b/CMDA/index.html
@@ -107,7 +107,7 @@ Master Plan.
   <div class="thumb-grid">
 
     <div class="thumb-card">
-      <img src="CMDA/Images/IMG_5302.jpg" alt="Church near an EWS housing, Besant Nagar, Chennai.">
+      <img src="Images/IMG_5302.jpg" alt="Church near an EWS housing, Besant Nagar, Chennai.">
       <p>Church near an EWS housing, Besant Nagar.</p>
     </div>
 
