Update project list in index.html

--- a/index.html
+++ b/index.html
@@ -98,8 +98,11 @@
       <article class="project">
         <h3>Studio portfolio</h3>
         <ul>
-          <li><strong>Studio 1</strong> – brief line about the studio and link:
+            <li><strong>Urban Design Portfolio</strong> – description + link:
             <a href="#" target="_blank">View work</a>
+          </li>
+           <li><strong>CEPT Online Portfolio</strong> – brief line about the studio and link:
+            <a href="https://portfolio.cept.ac.in/student/charan-v-ug180124" target="_blank">View work</a>
           </li>
           <li><strong>Studio 2</strong> – description + link:
             <a href="#" target="_blank">View work</a>
