Update portfolio links in index.html
Updated links for Urban Design Portfolio and removed placeholder links for Studio 2 and Studio 3.

--- a/index.html
+++ b/index.html
@@ -99,16 +99,10 @@
         <h3>Studio portfolio</h3>
         <ul>
             <li><strong>Urban Design Portfolio</strong> – description + link:
-            <a href="#" target="_blank">View work</a>
+            <a href="Portfolio_Charan.pdf" target="_blank">View work</a>
           </li>
            <li><strong>CEPT Online Portfolio</strong> – brief line about the studio and link:
             <a href="https://portfolio.cept.ac.in/student/charan-v-ug180124" target="_blank">View work</a>
-          </li>
-          <li><strong>Studio 2</strong> – description + link:
-            <a href="#" target="_blank">View work</a>
-          </li>
-          <li><strong>Studio 3</strong> – description + link:
-            <a href="#" target="_blank">View work</a>
           </li>
         </ul>
       </article>
