Revise 'About' section in index.html
Updated the content of the 'About' section to reflect a more personal introduction and mission statement regarding urban design and technology.

--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
   <main class="content">
 
     <section id="home" class="block">
-      <h2>About</h2>
+      <h2>Welcome to my Portfolio!</h2>
       <p>
-        I am a graduate with a bachelor's degree in urban design and looking forward for an exciting career in the public realm.
-        I am actively pursuing a career that will allow me to leverage my expertise effectively in sustainable infrastructure,
-        inclusive mobility, and people-oriented design to rejuvenate cities into dynamic, efficient, and futuristic spaces.
+      This GitHub repository showcases my professional experience and data-driven projects completed post-graduation.
       </p>
-      <p>
-        My interest in capacity building, systems thinking, urban data, and policy-making helps me approach projects holistically.
-        My education in Urban Design, Urban Planning, and public policies gives me a solid foundation in the urban development sector.
+      
+       <h2>About Me</h2>
+        </p>
+I am an urbanist driven by a simple question, 'Why can’t we use technology to solve the daily challenges of city living?' I view cities as vibrant economic hubs, yet they face complex hurdles in infrastructure, mobility, and security.
+My mission is to leverage Artificial Intelligence and emerging technologies to solve urban problems. With a background in Urban Design and Planning, I apply systems thinking and policy-making to create sustainable, inclusive, and futuristic urban spaces.
+I am actively seeking opportunities to apply my expertise in AI-driven urban interventions to improve citizen life and rejuvenate our cities.
       </p>
+     
     </section>
 
     <section id="data-projects" class="block">
