--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ I am actively seeking opportunities to apply my expertise in AI-driven urban int
         <h3>Bengaluru Air Quality Datajam – March 2025</h3>
         <p>Short description of the jam, data used, and outcome.</p>
         <ul class="project-links">
-          <li><a href="https://opencity.in/bengaluru-air-quality-datajam-march-2025/" target="_blank">Overview</a></li>
-          <li><a href="#" target="_blank">GitHub repo</a></li>
+          <li><a href="https://opencity.in/bengaluru-air-quality-datajam-march-2025/" target="_blank">DataJam Overview</a></li>
+          <li><a href="Datajam/index.html" target="_blank">Project Overview</a></li>
         </ul>
       </article>
 
