--- a/Datajam/index.html
+++ b/Datajam/index.html
@@ -2,131 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DataJam: Effect of Air Quality on Metro Rail Ridership</title>
+  <title>Effect of Air Quality on Metro Rail Ridership, Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- assumes style.css is in repo root -->
   <link rel="stylesheet" href="../style.css">
-  <style>
-    .project-header {
-      margin-bottom: 30px;
-      padding-bottom: 20px;
-      border-bottom: 2px solid var(--accent);
-    }
+</head>
+<body>
+  <main class="content">
 
-    .project-header h1 {
-      font-size: 2rem;
-      margin-bottom: 8px;
-      color: var(--fg);
-    }
+    <a href="../index.html#data-projects" class="back-link">&larr; Back to portfolio</a>
 
-    .project-meta {
-      font-size: 0.95rem;
-      color: var(--muted);
-      margin-bottom: 12px;
-    }
+    <!-- Header -->
+    <section class="block">
+      <h2>Effect of Air Quality on Metro Rail Ridership</h2>
+      <p>
+        This DataJam project examines how daily air quality conditions influence metro rail ridership in an Indian city,
+        using ridership and air quality data to uncover behavioral responses to pollution events.
+      </p>
+      <p>
+        The work combines ridership logs with AQI and pollutant metrics to quantify the strength of this relationship,
+        identify thresholds where behavior changes, and outline implications for transport planning and policy.
+      </p>
+    </section>
 
-    .section-block {
-      margin-bottom: 40px;
-      padding-bottom: 24px;
-      border-bottom: 1px dashed var(--border);
-    }
+    <!-- Objective -->
+    <section class="block">
+      <h3>Objective</h3>
+      <p>
+        To measure the impact of air quality on metro usage by:
+      </p>
+      <ul>
+        <li>Estimating how changes in AQI relate to changes in daily ridership.</li>
+        <li>Detecting pollution thresholds where ridership drops more sharply.</li>
+        <li>Interpreting what these patterns mean for commuters and metro operators.</li>
+      </ul>
+    </section>
 
-    .section-block:last-of-type {
-      border-bottom: none;
-    }
+    <!-- Data & Approach (brief) -->
+    <section class="block">
+      <h3>Data &amp; Approach</h3>
+      <ul>
+        <li>Daily metro ridership data, aggregated at system or line level.</li>
+        <li>Daily air quality indicators (AQI and key pollutants) from official monitoring sources.</li>
+        <li>Exploratory plots, correlations and simple models to relate AQI levels to ridership changes over time.</li>
+      </ul>
+    </section>
 
-    .section-block h2 {
-      font-size: 1.4rem;
-      margin-bottom: 14px;
-      color: var(--accent);
-    }
+    <!-- Key Results -->
+    <section class="block">
+      <h3>Key Results</h3>
+      <ul>
+        <li>Ridership tends to fall on days with poorer air quality, indicating a negative relationship between AQI and metro use.</li>
+        <li>Behavioral changes are more visible once AQI crosses into higher pollution categories, suggesting threshold effects.</li>
+        <li>Some of the response appears with a lag of about one–two days, hinting at delayed awareness and adjustment by commuters.</li>
+      </ul>
+    </section>
 
-    .section-block p {
-      margin-bottom: 12px;
-      line-height: 1.7;
-    }
+    <!-- Slides (last 4) -->
+    <section class="block">
+      <h3>Selected slides</h3>
+      <p>
+        The last four slides summarise the analysis, results and implications. Click to view larger if you link them to full-size images.
+      </p>
 
-    .section-block ul {
-      margin-left: 20px;
-      margin-bottom: 12px;
-    }
+      <div class="slides-gallery">
+        <div class="slide-card">
+          <img src="slides/slide-01.png" alt="Slide 1 – Data and setup">
+          <p class="slide-card-text">Data sources and how ridership and air quality were combined.</p>
+        </div>
 
-    .section-block li {
-      margin-bottom: 8px;
-    }
+        <div class="slide-card">
+          <img src="slides/slide-02.png" alt="Slide 2 – Patterns and correlation">
+          <p class="slide-card-text">Trend and correlation plots showing how ridership moves with AQI.</p>
+        </div>
 
-    .slides-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
+        <div class="slide-card">
+          <img src="slides/slide-03.png" alt="Slide 3 – Key findings">
+          <p class="slide-card-text">Main quantitative findings and threshold effects.</p>
+        </div>
 
-    .slide-card {
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      overflow: hidden;
-      background: #fff;
-      transition: box-shadow 0.2s ease;
-    }
+        <div class="slide-card">
+          <img src="slides/slide-04.png" alt="Slide 4 – Takeaways and next steps">
+          <p class="slide-card-text">Policy takeaways and ideas for extending the work to other cities.</p>
+        </div>
+      </div>
+    </section>
 
-    .slide-card:hover {
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
+    <!-- Takeaways -->
+    <section class="block">
+      <h3>Takeaways</h3>
+      <ul>
+        <li>Air quality is not just a health metric; it also shapes how and when people use public transport.</li>
+        <li>Metro operators can anticipate demand dips around high-pollution days and plan services and communication accordingly.</li>
+        <li>The same framework can be reused for other cities or modes (bus, suburban rail) as more data becomes available.</li>
+      </ul>
+    </section>
 
-    .slide-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      display: block;
-    }
+    <!-- Links -->
+    <section class="block">
+      <h3>Links &amp; files</h3>
+      <ul>
+        <li><a href="Charan_Effect-of-Air-Quality-on-Metro-Rail-Ridership-1.pdf" target="_blank">Project report (PDF)</a></li>
+        <li><a href="analysis-notebook.html" target="_blank">Interactive analysis notebook (HTML)</a></li>
+        <li><a href="https://github.com/charan0027/Project-Alpha" target="_blank">Code / repository</a></li>
+      </ul>
+    </section>
 
-    .slide-card-text {
-      padding: 12px;
-      font-size: 0.9rem;
-      color: var(--muted);
-    }
+    <footer class="footer">
+      <p>&copy; 2025 Charan Vijayan</p>
+    </footer>
+  </main>
+</body>
+</html>
 
-    .highlight-box {
-      background: var(--accent-soft);
-      border-left: 4px solid var(--accent);
-      padding: 16px;
-      margin: 16px 0;
-      border-radius: 4px;
-    }
 
-    .takeaways {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 16px;
-      margin-top: 16px;
-    }
 
-    .takeaway-card {
-      background: #f9f9f9;
-      border: 1px solid var(--border);
-      border-radius: 6px;
-      padding: 14px;
-      font-size: 0.95rem;
-    }
 
-    .takeaway-card strong {
-      color: var(--accent);
-      display: block;
-      margin-bottom: 6px;
-    }
 
-    .back-link {
-      font-size: 0.9rem;
-      margin-bottom: 20px;
-      display: inline-block;
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    .back-link:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <main class="content">
