--- a/Datajam/index.html
+++ b/Datajam/index.html
@@ -67,22 +67,22 @@
 
       <div class="slides-gallery">
         <div class="slide-card">
-          <img src="slides/slide-01.png" alt="Slide 1 – Data and setup">
+          <img src="slide-01.jpg" alt="Slide 1 – Data and setup">
           <p class="slide-card-text">Data sources and how ridership and air quality were combined.</p>
         </div>
 
         <div class="slide-card">
-          <img src="slides/slide-02.png" alt="Slide 2 – Patterns and correlation">
+          <img src="slide-02.jpg" alt="Slide 2 – Patterns and correlation">
           <p class="slide-card-text">Trend and correlation plots showing how ridership moves with AQI.</p>
         </div>
 
         <div class="slide-card">
-          <img src="slides/slide-03.png" alt="Slide 3 – Key findings">
+          <img src="slide-03.jpg" alt="Slide 3 – Key findings">
           <p class="slide-card-text">Main quantitative findings and threshold effects.</p>
         </div>
 
         <div class="slide-card">
-          <img src="slides/slide-04.png" alt="Slide 4 – Takeaways and next steps">
+          <img src="slide-04.jpg" alt="Slide 4 – Takeaways and next steps">
           <p class="slide-card-text">Policy takeaways and ideas for extending the work to other cities.</p>
         </div>
       </div>
@@ -115,121 +115,3 @@
 </body>
 </html>
 
-
-
-
-
-</head>
-<body>
-  <main class="content">
-    <a href="../index.html#data-projects" class="back-link">&larr; Back to portfolio</a>
-
-    <!-- Project Header -->
-    <div class="project-header">
-      <h1>Effect of Air Quality on Metro Rail Ridership</h1>
-      <div class="project-meta">
-        <strong>DataJam 2025</strong> | Research into behavioral responses to air pollution in urban mobility
-      </div>
-      <p>
-        A data-driven study exploring the relationship between ambient air quality and metro rail ridership, 
-        revealing how commuters adjust travel behavior in response to pollution events.
-      </p>
-    </div>
-
-    <!-- Objective -->
-    <section class="section-block">
-      <h2>Objective</h2>
-      <p>
-        Quantify the correlation between daily AQI (Air Quality Index) and metro ridership volumes, 
-        and identify threshold pollution levels where behavioral shifts occur. 
-        The findings provide actionable insights for urban planners on air quality impacts on mobility behavior.
-      </p>
-    </section>
-
-    <!-- Key Findings -->
-    <section class="section-block">
-      <h2>Key Findings</h2>
-      <ul>
-        <li><strong>Negative Correlation:</strong> As air quality worsens, metro ridership decreases measurably (r = –0.45 to –0.65)</li>
-        <li><strong>Threshold Effect:</strong> Sharp ridership decline accelerates in the "Poor" AQI range (200–300)</li>
-        <li><strong>Lagged Response:</strong> Peak pollution days show largest ridership drops 1–2 days later, suggesting behavioral lag</li>
-        <li><strong>Route Variation:</strong> Longer suburban routes show stronger air quality sensitivity than short inner-city trips</li>
-      </ul>
-
-      <div class="highlight-box">
-        <strong>Impact Quantified:</strong> A 50-point AQI increase corresponds to ~5–8% reduction in daily ridership.
-      </div>
-    </section>
-
-    <!-- Presentation Slides (Last 4) -->
-    <section class="section-block">
-      <h2>Presentation</h2>
-      <div class="slides-gallery">
-        <!-- Slide 1 -->
-        <div class="slide-card">
-          <img src="slide-01.jpg" alt="Slide 1">
-          <div class="slide-card-text">Slide 1: Data &amp; Methodology</div>
-        </div>
-
-        <!-- Slide 2 -->
-        <div class="slide-card">
-          <img src="slide-02.png" alt="Slide 2">
-          <div class="slide-card-text">Slide 2: Correlation &amp; Trends</div>
-        </div>
-
-        <!-- Slide 3 -->
-        <div class="slide-card">
-          <img src="slide-03.png" alt="Slide 3">
-          <div class="slide-card-text">Slide 3: Findings &amp; Patterns</div>
-        </div>
-
-        <!-- Slide 4 -->
-        <div class="slide-card">
-          <img src="slide-04.png" alt="Slide 4">
-          <div class="slide-card-text">Slide 4: Policy Implications</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Takeaways -->
-    <section class="section-block">
-      <h2>Takeaways &amp; Next Steps</h2>
-      <div class="takeaways">
-        <div class="takeaway-card">
-          <strong>Real-Time AQI Signaling</strong>
-          <p>Integrate live AQI displays in metro apps and stations for informed commuter decisions.</p>
-        </div>
-
-        <div class="takeaway-card">
-          <strong>Flexible Work Policies</strong>
-          <p>Encourage work-from-home on severe pollution days; metro operators adjust capacity accordingly.</p>
-        </div>
-
-        <div class="takeaway-card">
-          <strong>Revenue Planning</strong>
-          <p>Account for seasonal pollution dips in metro revenue forecasting and service planning.</p>
-        </div>
-
-        <div class="takeaway-card">
-          <strong>Replicable Framework</strong>
-          <p>Data-driven model applicable to other Indian cities for sustainable urban mobility strategy.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Deliverables -->
-    <section class="section-block">
-      <h2>Deliverables</h2>
-      <ul>
-        <li><a href="Effect-of-Air-Quality-on-Metro-Rail-Ridership.pdf" target="_blank">Full Research Paper (PDF)</a></li>
-        <li><a href="analysis-notebook.html" target="_blank">Interactive Analysis &amp; Visualizations</a></li>
-        <li><a href="https://github.com/charan0027/datajam-air-quality" target="_blank">GitHub Repository</a></li>
-      </ul>
-    </section>
-
-    <footer class="footer">
-      <p>&copy; 2025 Charan Vijayan | DataJam: Air Quality &amp; Metro Ridership</p>
-    </footer>
-  </main>
-</body>
-</html>
